// Schema documentation for the expense reserve/reimbursement system.
// Runtime applies src/db/migrations; requirements/database.sql is the synchronized full-schema reference.

Table payers {
  id integer [pk, increment]
  name text [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Lookup list of people who can pay/advance money for an expense item. Managed from Settings and selectable from the expense item form.'
}

Table expense_rounds {
  id integer [pk, increment]
  name text [not null, note: 'e.g. "รอบเดือนกันยายน 2569" — also doubles as the period label']
  note text
  status text [not null, default: 'in_progress', note: 'in_progress | completed | cancelled']
  public_token text [not null, unique, note: 'opaque share-link token for the unauthenticated /rounds/public/[token] view']
  created_at timestamptz [not null, default: `now()`]

  Note: 'One reserve/reimbursement cycle. No stored reserve amount by design — only the total spent per payer is tracked.'
}

Table expense_categories {
  id integer [pk, increment]
  name text [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Lookup list of expense categories managed from Settings. Deleting a category keeps existing expense records with no category assigned.'
}

Table expense_items {
  id integer [pk, increment]
  round_id integer [not null, ref: > expense_rounds.id]
  payer_id integer [ref: > payers.id, note: 'Optional after deleting a payer; the expense record remains with no payer assigned.']
  category_id integer [ref: > expense_categories.id, note: 'Optional after deleting a category; the expense record remains with no category assigned.']
  description text [not null]
  amount_satang integer [not null, note: 'baht * 100, integer to avoid float rounding on SUM']
  expense_date text [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table expense_item_receipts {
  id integer [pk, increment]
  item_id integer [not null, ref: > expense_items.id]
  storage_key text [not null, note: 'Object key of the JPEG-compressed bill/slip image in the GOOGLE_BUCKET_PATH GCS bucket']
  mime_type text [not null]
  filename text
  created_at timestamptz [not null, default: `now()`]

  Note: 'One expense item can have multiple attached receipts. New uploads accept JPEG, PNG, or WebP then store a compressed JPEG in GCS; legacy PDF rows remain readable.'
}

Table users {
  id integer [pk, increment]
  email citext [not null, unique, note: 'case-insensitive via citext extension']
  display_name text [not null]
  password_hash text [not null, note: 'scrypt hash; raw passwords are never stored']
  role text [not null, note: 'admin | editor | viewer']
  must_change_password boolean [not null, default: true]
  is_active boolean [not null, default: true]
  failed_login_attempts integer [not null, default: 0]
  locked_until timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Shared-team account. Admin provisions accounts; users are deactivated rather than deleted.'
}

Table sessions {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  token_hash text [not null, unique, note: 'SHA-256 of opaque httpOnly cookie token']
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  last_used_at timestamptz [not null, default: `now()`]
}

Ref: expense_items.round_id > expense_rounds.id [delete: cascade]
Ref: expense_item_receipts.item_id > expense_items.id [delete: cascade]
Ref: sessions.user_id > users.id [delete: cascade]
